--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
  
 
 <nav class="navbar navbar-icon-top navbar-expand-lg navbar-dark bg-dark">
-  <h1 style="color: white; font-style: italic;">Prono Kids</h1>
+  <h1 style="color: white; font-style: italic;">Prono Kids LOGO</h1>
   
 
   <div class="collapse navbar-collapse d-flex justify-content-center" style="margin-left:350px ;" id="navbarSupportedContent">
